--- a/frontend/src/app/question/question.component.html
+++ b/frontend/src/app/question/question.component.html
@@ -1,3 +1,5 @@
+<app-display-number [hidden]="overlayDisplayFlag" [quesNumber]="currentQuestionNumber" />
+
 <div class="w-screen h-screen flex flex-col items-center justify-center bgimage bg-gray-800 relative">
     <div class="flex justify-center items-center w-screen">
         <div class="flex basis-[30%]  items-center justify-center">
@@ -33,8 +35,9 @@
 
             <div class="p-5 w-[80%] max-h-max bg-white rounded-[2rem] relative">
                 <div class="question flex items-center justify-center text-3xl">
-                    <ngx-typed-js [strings]="[currentSelectedQuestion ]" [showCursor]="false" [typeSpeed]="15">
-                        <h1 class="typing"></h1>
+                    <ngx-typed-js [strings]="[currentSelectedQuestion ]" [showCursor]="false" [typeSpeed]="15"
+                        [startDelay]="2700">
+                        <h1 class="typing italic"></h1>
                     </ngx-typed-js>
                     <!-- {{ currentSelectedQuestion }} -->
                 </div>
@@ -46,7 +49,7 @@
                         <div class="ml-5 borderLeftStyle pr-2">{{ option.rome }}</div>
                         <div class="flex justify-center items-center w-full">
                             <ngx-typed-js [strings]="[option.name ]" [showCursor]="false" [typeSpeed]="30">
-                                <h1 class="typing"></h1>
+                                <h1 class="typing italic"></h1>
                             </ngx-typed-js>
                             <!-- {{ option.name }} -->
                         </div>
@@ -72,7 +75,8 @@
                 </div>
 
                 <div class="absolute top-0 right-6 text-lg italic rounded-lg font-semibold">
-                    <ngx-typed-js [strings]="[currentSelectedCategoryName ]" [showCursor]="false" [typeSpeed]="40">
+                    <ngx-typed-js [strings]="[currentSelectedCategoryName ]" [showCursor]="false" [typeSpeed]="40"
+                        [startDelay]="2700">
                         <h1 class="typing"></h1>
                     </ngx-typed-js>
                     <!-- {{currentSelectedCategoryName}} -->
