questions logic completed

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<div class="circular-div"></div>
 <div class=" bgimage1  w-screen h-screen">
     <div class="logo" routerLink="/questions">
         <div class="rings">
