--- a/frontend/src/app/question/question.component.html
+++ b/frontend/src/app/question/question.component.html
@@ -4,10 +4,10 @@
     <div class="flex justify-center items-center w-screen">
         <div class="flex basis-[30%]  items-center justify-center">
             <div class="">
-                <img class="w-[8rem] cursor-pointer" src=" /assets/lifeline1bgremoved.png" (click)="fiftyfifty()"
+                <img class="w-[8rem] cursor-pointer hover-item" src=" /assets/lifeline1bgremoved.png" (click)="fiftyfifty()"
                     *ngIf="!fiftyfiftyUsed">
-                <img class="w-[8rem] cursor-pointer" src=" /assets/lifeline1cross.png" *ngIf="fiftyfiftyUsed">
-                <img class="w-[9rem] cursor-pointer" src=" /assets/audiencelifeline.png" (click)="audiencePole()"
+                <img class="w-[8rem] cursor-pointer " src=" /assets/lifeline1cross.png" *ngIf="fiftyfiftyUsed">
+                <img class="w-[9rem] cursor-pointer hover-item" src=" /assets/audiencelifeline.png" (click)="audiencePole()"
                     *ngIf="!audiencePoleUsed">
                 <img class="w-[9rem] cursor-pointer" src=" /assets/audiencelifelineused.png" *ngIf="audiencePoleUsed">
             </div>
@@ -16,16 +16,16 @@
             <div class="flex w-[50%] ml-[15%] justify-around items-center">
                 <div class="">
                     <button [ngClass]="{ startBtn: startFlag }"
-                        class="btn btn-outline-primary btn-lg text-2xl text-black start__btn w-[7rem] italic"
+                        class="btn btn-outline-primary btn-lg text-2xl text-black start__btn w-[7rem] italic hover-item"
                         (click)="startTimer()">
                         Start
                     </button>
                 </div>
                 <div class="circle">
-                    <h2 class="timer font-bold text-[2.5rem]">{{ timeLeft }}</h2>
+                    <h2 class="timer font-bold text-[2.5rem] hover-item">{{ timeLeft }}</h2>
                 </div>
                 <div class="">
-                    <button class="btn btn-primary btn-lg text-2xl text-black pause__btn w-[7rem] italic"
+                    <button class="btn btn-primary btn-lg text-2xl text-black pause__btn w-[7rem] italic hover-item"
                         [ngClass]="{ startBtn: pauseFlag }" (click)="pauseTimer()">
                         Pause
                     </button>
@@ -44,7 +44,7 @@
 
                 <div class="options grid grid-cols-2 gap-x-7 gap-y-12 mt-5"
                     *ngIf="!correctAnswerFlag && !wrongAnswerFlag && displayOptions">
-                    <div class="borderstyle flex cursor-pointer" #option *ngFor="let option of options"
+                    <div class="borderstyle flex cursor-pointer  hover-item" #option *ngFor="let option of options"
                         [ngClass]="{ colors: option.color }" (click)="changeColor(option.id)">
                         <div class="ml-5 borderLeftStyle pr-2">{{ option.rome }}</div>
                         <div class="flex justify-center items-center w-full">
@@ -74,7 +74,7 @@
                     </div>
                 </div>
 
-                <div class="absolute top-0 right-6 text-lg italic rounded-lg font-semibold">
+                <div class="absolute top-0 right-6 text-lg italic rounded-lg font-semibold hover-item">
                     <ngx-typed-js [strings]="[currentSelectedCategoryName ]" [showCursor]="false" [typeSpeed]="40"
                         [startDelay]="2700">
                         <h1 class="typing"></h1>
@@ -83,7 +83,7 @@
                 </div>
             </div>
 
-            <div class="mt-6 flex justify-end w-3/5 ml-[19.5%]" [hidden]="wrongAnswerFlag">
+            <div class="mt-6 flex justify-end w-3/5 ml-[19.5%]  hover-item" [hidden]="wrongAnswerFlag">
                 <button class="bottombtn italic" (click)="displayAnswer()" *ngIf="!correctAnswerFlag"
                     [disabled]="!optionclicked">
                     Lock Answer
@@ -95,7 +95,7 @@
         </div>
 
     </div>
-    <button class="absolute  top-2 right-5 btnEnd m-2 italic" routerLink="">
+    <button class="absolute  top-2 right-5 btnEnd m-2 italic  hover-item" routerLink="">
         End Quiz
     </button>
 
