--- a/frontend/src/app/question/question.component.css
+++ b/frontend/src/app/question/question.component.css
@@ -117,3 +117,11 @@ button {
   justify-content: center;
   align-items: center;
 }
+/* ///hover effect of images
+ */
+ .hover-item {
+  transition: 0.3s;
+}
+.hover-item:hover {
+  transform: translate(0, -10px);
+}
