music files addded

--- a/frontend/src/app/display-number/display-number.component.html
+++ b/frontend/src/app/display-number/display-number.component.html
@@ -96,12 +96,12 @@
             </div>
         </div>
         <div class="back flex items-center justify-center">
-            <div class="text-[20rem] gif-container">
-              <div class="fade-in white text">{{questionNumber}}</div>
-             
+            <div class="text-[12rem] gif-container">
+                <div class="fade-in text-white">{{questionNumber}}</div>
+
             </div>
-          </div>
-          
-          
+        </div>
+
+
     </div>
 </div>
