sound effects added

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="circular-div"></div>
-<div class=" bgimage1  w-screen h-screen">
+<body >
+<div class=" bgimage1  w-screen h-screen" (onclick)="playAudio()"   >
     <div class="logo" routerLink="/questions">
         <div class="rings">
             <div class="ring">
@@ -117,3 +117,4 @@
 
 
 </div>
+</body>
