--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -1,20 +1,20 @@
-/* .bgimage1 {
-  background-image: url("/assets/homebg.png");
-  object-fit: contain;
-} */
+
 
 .bgimage1 {
   margin: 0;
-  overflow: hidden;
-  background: #222;
-  background: radial-gradient(circle, #6f40ec 0%, #1d0f52 100%);
+  /* overflow: hidden; */
+  /* background: #222; */
+  background: radial-gradient(circle, #e6e8eb 0%, #4f5456 100%);
   min-height: 100vh;
+  /* background-image: url("/assets/quiz.png"); */
+  /* object-fit: cover; */
+  /* background-size: co; */
 }
 
 .logo {
-  background-color: #390f4e;
+  background-color: #232526;
   border-radius: 50%;
-  box-shadow: 0px 0px 20px 8px #34c6f6;
+  box-shadow: 0px 0px 20px 8px #4f5456;
   position: absolute;
   left: 50%;
   margin-left: -225px;
@@ -46,10 +46,10 @@
   position: absolute;
   top: 35px;
   left: 35px;
-  border: 4px solid #bcd8da;
+  border: 4px solid #dabcbd;
   border-radius: 50%;
   padding: 10px;
-  background-color: #242343;
+  /* background-color: ; */
   -webkit-animation: rotate 100s linear infinite;
   animation: rotate 100s linear infinite;
 }
@@ -58,6 +58,10 @@
   position: absolute;
   top: 8px;
   left: 158px;
+  
+}
+*,::before,::after{
+  --tw-ring-color:transparent;
 }
 .ring:nth-of-type(1) {
   transform: rotate(10deg);
@@ -198,12 +202,13 @@
 .rin {
   width: 50px;
   height: 350px;
-  border: 2px solid #5588cc;
+  border: 2px solid #f4b869;
   border-radius: 50%;
 }
 
 .ring:nth-child(odd) .rin {
-  border: 2px solid #d4af37;
+  border: 2px solid #f49c60; 
+
 }
 
 .border {
@@ -648,7 +653,7 @@
 }
 
 .char {
-  color: #fff;
+  color: #f49c60;
   font: 26px Monaco, MonoSpace;
   position: absolute;
   width: 20px;
