test component added

--- a/frontend/src/app/display-number/display-number.component.css
+++ b/frontend/src/app/display-number/display-number.component.css
@@ -1,3 +1,17 @@
+.div-with-lighting {
+  animation: rainbow 5s linear infinite;
+}
+
+@keyframes rainbow {
+  0% { box-shadow: 0 0 10px 10px red; }
+  14% { box-shadow: 0 0 10px 10px orange; }
+  28% { box-shadow: 0 0 10px 10px yellow; }
+  42% { box-shadow: 0 0 10px 10px green; }
+  57% { box-shadow: 0 0 10px 10px blue; }
+  71% { box-shadow: 0 0 10px 10px indigo; }
+  85% { box-shadow: 0 0 10px 10px violet; }
+  100% { box-shadow: 0 0 10px 10px red; }
+} 
 .logo1 {
   background-color: #232526;
   border-radius: 50%;
