--- a/frontend/src/app/question/question.component.html
+++ b/frontend/src/app/question/question.component.html
@@ -8,6 +8,7 @@
 
 </div>
 
+
 <div class="w-screen h-screen flex flex-col items-center justify-center bgimage bg-gray-800 relative">
     <div class="flex justify-center items-center w-screen">
         <div class="flex basis-[30%]  items-center justify-center">
@@ -41,7 +42,7 @@
             </div>
 
 
-            <div class="p-5 w-[80%] max-h-max bg-white rounded-[2rem] relative">
+            <div class="p-5 w-[80%] max-h-max bg-white rounded-[2rem] relative div-with-lighting">
                 <div class="question flex items-center justify-center text-3xl">
                     <ngx-typed-js [strings]="[currentSelectedQuestion ]" [showCursor]="false" [typeSpeed]="15"
                         [startDelay]="2700">
