--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,96 +1,97 @@
-<body >
-<div class=" bgimage1  w-screen h-screen" (onclick)="playAudio()"   >
-    <div class="logo" routerLink="/questions">
-        <div class="rings">
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="ring">
-                <div class="rin"></div>
-            </div>
-            <div class="border"></div>
+<body>
+    <app-test-component></app-test-component>
+    <div class=" bgimage1  w-screen h-screen" (onclick)="playAudio()">
+        <div class="logo" routerLink="/questions">
+            <div class="rings">
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="ring">
+                    <div class="rin"></div>
+                </div>
+                <div class="border"></div>
 
+            </div>
+            <div class="diamond"></div>
+            <div class="diamond"></div>
+            <div class="diamond"></div>
+            <div class="diamond"></div>
+            <div class="mainHeading">Ek aur sawaal</div>
+            <div class="subHeading1">
+                <div class="char">&nbsp;</div>
+                <div class="char">&nbsp;</div>
+                <div class="char"><b>R</b></div>
+                <div class="char"><b>E</b></div>
+                <div class="char"><b>A</b></div>
+                <div class="char"><b>L</b></div>
+                <div class="char"><b>P</b></div>
+                <div class="char"><b>A</b></div>
+                <div class="char"><b>G</b></div>
+                <div class="char"><b>E</b></div>
+                <div class="char">&nbsp;</div>
+            </div>
+            <div class="subHeading2">
+                <div class="char">&nbsp;</div>
+                <div class="char">&nbsp;</div>
+                <div class="char"><b>R</b></div>
+                <div class="char"><b>E</b></div>
+                <div class="char"><b>A</b></div>
+                <div class="char"><b>L</b></div>
+                <div class="char"><b>P</b></div>
+                <div class="char"><b>A</b></div>
+                <div class="char"><b>G</b></div>
+                <div class="char"><b>E</b></div>
+            </div>
         </div>
-        <div class="diamond"></div>
-        <div class="diamond"></div>
-        <div class="diamond"></div>
-        <div class="diamond"></div>
-        <div class="mainHeading">Ek aur sawaal</div>
-        <div class="subHeading1">
-            <div class="char">&nbsp;</div>
-            <div class="char">&nbsp;</div>
-            <div class="char"><b>R</b></div>
-            <div class="char"><b>E</b></div>
-            <div class="char"><b>A</b></div>
-            <div class="char"><b>L</b></div>
-            <div class="char"><b>P</b></div>
-            <div class="char"><b>A</b></div>
-            <div class="char"><b>G</b></div>
-            <div class="char"><b>E</b></div>
-            <div class="char">&nbsp;</div>
-        </div>
-        <div class="subHeading2">
-            <div class="char">&nbsp;</div>
-            <div class="char">&nbsp;</div>
-            <div class="char"><b>R</b></div>
-            <div class="char"><b>E</b></div>
-            <div class="char"><b>A</b></div>
-            <div class="char"><b>L</b></div>
-            <div class="char"><b>P</b></div>
-            <div class="char"><b>A</b></div>
-            <div class="char"><b>G</b></div>
-            <div class="char"><b>E</b></div>
-        </div>
-    </div>
-    <!-- <div class="flex flex-col justify-center items-center w-3/4 h-1/2 bg-slate-200 rounded-lg bgimage1 bg-gray-700">
+        <!-- <div class="flex flex-col justify-center items-center w-3/4 h-1/2 bg-slate-200 rounded-lg bgimage1 bg-gray-700">
 
             <div class="mb-5 w-3/4 ">
                 <input type="text" class="form-control text-2xl placeholder-gray-400 placeholder:ease-in-out"
@@ -117,5 +118,5 @@
         </div> -->
 
 
-</div>
+    </div>
 </body>
