--- a/frontend/src/app/question/question.component.css
+++ b/frontend/src/app/question/question.component.css
@@ -1,33 +1,3 @@
-.div-with-lighting {
-  animation: rainbow 5s linear infinite;
-}
-
-@keyframes rainbow {
-  0% {
-    box-shadow: 0 0 10px 10px red;
-  }
-  14% {
-    box-shadow: 0 0 10px 10px orange;
-  }
-  28% {
-    box-shadow: 0 0 10px 10px yellow;
-  }
-  42% {
-    box-shadow: 0 0 10px 10px green;
-  }
-  57% {
-    box-shadow: 0 0 10px 10px blue;
-  }
-  71% {
-    box-shadow: 0 0 10px 10px indigo;
-  }
-  85% {
-    box-shadow: 0 0 10px 10px violet;
-  }
-  100% {
-    box-shadow: 0 0 10px 10px red;
-  }
-}
 .overlay {
   position: fixed;
   top: 0;
@@ -48,6 +18,14 @@
   background: #222;
   background: radial-gradient(circle, #e6e8eb 0%, #4f5456 100%);
   min-height: 100vh;
+}
+
+.bgGreen {
+  background: radial-gradient(circle, #e6e8eb 0%, #3e9651 100%);
+}
+
+.bgRed {
+  background: radial-gradient(circle, #e6e8eb 0%, #963e3e 100%);
 }
 
 .questionBorderStyle {
