Display logo changes

--- a/frontend/src/app/display-number/display-number.component.html
+++ b/frontend/src/app/display-number/display-number.component.html
@@ -72,27 +72,28 @@
             <div class="mainHeading">Ek aur sawaal</div>
             <div class="subHeading1">
                 <div class="char">&nbsp;</div>
-                <div class="char">R</div>
-                <div class="char">E</div>
-                <div class="char">A</div>
-                <div class="char">L</div>
                 <div class="char">&nbsp;</div>
-                <div class="char">P</div>
-                <div class="char">A</div>
-                <div class="char">G</div>
-                <div class="char">E</div>
+                <div class="char"><b>R</b></div>
+                <div class="char"><b>E</b></div>
+                <div class="char"><b>A</b></div>
+                <div class="char"><b>L</b></div>
+                <div class="char"><b>P</b></div>
+                <div class="char"><b>A</b></div>
+                <div class="char"><b>G</b></div>
+                <div class="char"><b>E</b></div>
+                <div class="char">&nbsp;</div>
             </div>
             <div class="subHeading2">
                 <div class="char">&nbsp;</div>
-                <div class="char">R</div>
-                <div class="char">E</div>
-                <div class="char">A</div>
-                <div class="char">L</div>
                 <div class="char">&nbsp;</div>
-                <div class="char">P</div>
-                <div class="char">A</div>
-                <div class="char">G</div>
-                <div class="char">E</div>
+                <div class="char"><b>R</b></div>
+                <div class="char"><b>E</b></div>
+                <div class="char"><b>A</b></div>
+                <div class="char"><b>L</b></div>
+                <div class="char"><b>P</b></div>
+                <div class="char"><b>A</b></div>
+                <div class="char"><b>G</b></div>
+                <div class="char"><b>E</b></div>
             </div>
         </div>
         <div class="back flex items-center justify-center ">
