--- a/frontend/src/app/result/result.component.html
+++ b/frontend/src/app/result/result.component.html
@@ -1,6 +1,10 @@
-<p>result works!</p>
+<!-- <p>result works!</p>
 <div>
     <input type="file" (change)="onFileSelected($event)">
     <button (click)="onUpload()" class="btn btn-primary">Upload</button>
 
-</div>
+</div> -->
+<body>
+    
+    <canvas #clockCanvas width="1000" height="1000"></canvas>
+</body>
